<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.evan.etcweb.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/select_church_layout"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/church_selected"
            android:text="@string/select_church"
            android:layout_centerInParent="true"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/select_church_icon"
            android:src="@drawable/ic_chevron_right_grey600_24dp"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/person_detail_layout"
        android:layout_below="@id/select_church_layout">

        <android.support.v4.view.ViewPager
            android:id="@+id/person_viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v4.view.ViewPager>

        <com.viewpagerindicator.CirclePageIndicator
            android:id="@+id/indicator"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_alignParentBottom="true"
            app:fillColor="#FFFFFF"
            app:radius="5dp"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="1dp"
            android:paddingBottom="20dp"/>
    </RelativeLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/person_detail_layout"
        android:weightSum="2"
        android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/up_layout"
        android:layout_weight="1"
        android:weightSum="3"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/light_green"
            android:textColor="@android:color/white"
            android:text="@string/watch" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/light_green1"
            android:textColor="@android:color/white"
            android:id="@+id/main_tab_pray"
            android:text="@string/pray" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/light_green"
            android:textColor="@android:color/white"
            android:text="@string/directory" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1"
        android:weightSum="3"
        android:layout_below="@id/up_layout">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/light_green1"
            android:textColor="@android:color/white"
            android:text="@string/events" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/light_green"
            android:textColor="@android:color/white"
            android:text="@string/give" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:background="@color/light_green1"
            android:textColor="@android:color/white"
            android:text="@string/inspire" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>
